--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                                         <i class="lni-phone-handset size-md"></i>
                                     </div>
                                     <div class="mt-3">
-                                        <h5 class="text-dark mb-0">Call Us On</h5>
+                                        <h5 class="text-dark mb-0">Call Me On</h5>
                                         <small class="text-muted">+84 973 043 445</small>
                                     </div>
                                 </div>
