--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                                     </div>
                                     <div class="mt-3">
                                         <h5 class="text-dark mb-0 contact_detail-title">Visit Office</h5>
-                                        <small class="text-muted">C14 CT1 Bắc Hà, Nam Từ Liêm, Hà Nội.</small>
+                                        <small class="text-muted">Eco Green City, Thanh Trì, Hà Nội.</small>
                                     </div>
                                 </div>
                             </div>
@@ -694,7 +694,7 @@
                                         <i class="lni-pointer size-md"></i>
                                     </div>
                                     <div class="mt-3">
-                                        <h5 class="text-dark mb-0">Email Us At</h5>
+                                        <h5 class="text-dark mb-0">Email Me At</h5>
                                         <small class="text-muted">quynb201@gmail.com</small>
                                     </div>
                                 </div>
