--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                     </div>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 mr-4">
-                                    <a href="https://quynbcv.s3.ap-southeast-1.amazonaws.com/CV+Nguye%CC%82%CC%83n+Ba%CC%81+Quy%CC%81.pdf" class="pill-button">Download Cv</a>
+                                    <a target="_blank" href="https://quynbcv.s3.ap-southeast-1.amazonaws.com/CV+Nguye%CC%82%CC%83n+Ba%CC%81+Quy%CC%81.pdf" class="pill-button">Download Cv</a>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 to-contact">
                                     <a href="#contact" class="pill-button">Hire Me</a>
