--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                                                     <p>Birthday : <span> 20 Jan 2001</span></p>
                                                 </li>
                                                 <li>
-                                                    <p>Website : <span> www.retrina.com</span></p>
+                                                    <p>Website : <span> https://baquyptit2001.github.io</span></p>
                                                 </li>
                                                 <li>
                                                     <p>Phone : <span> +84 973 043 445</span></p>
